--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
+language: r
 sudo: true
 sudo: required
 cache: packages
 dist: trusty
 
 before_install:
-  - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
-  - sudo apt-get --yes --force-yes update -qq
-  - sudo apt-get install --yes libudunits2-dev libproj-dev libgeos-dev libgdal-dev libgsl-dev
   - git lfs pull
 
 script: 
