--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,10 @@ sudo: required
 cache: packages
 dist: trusty
 
-addons:
-  apt:
-    packages:
-      - libudunits2-dev
-      - libproj-dev 
-      - libgeos-dev
-      - libgdal-dev 
-      - libgsl-dev
-
 before_install:
+  - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
+  - sudo apt-get --yes --force-yes update -qq
+  - sudo apt-get install --yes libudunits2-dev libproj-dev libgeos-dev libgdal-dev libgsl-dev
   - git lfs pull
 
 script: 
