--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: r
 sudo: required
-cache: packages
+cache: 
 dist: trusty
 before_install:
 - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
