--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
 - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 6B05F25D762E3157
 - sudo apt-get --yes --force-yes update -qq
-- sudo apt-get install --yes libudunits2-dev libproj-dev libgeos-dev libgdal-dev libgsl-dev ggmap-dev
+- sudo apt-get install --yes libudunits2-dev libproj-dev libgeos-dev libgdal-dev libgsl-dev
 script:
 - R -f tests/render_rmds.R
 - df -h
