--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,3 +1,3 @@
 Package: compendium
 Version: 0.1.0
-Depends: knitr, praise, raster, tigris, sf, httr, tidyverse, ggmap
+Depends: knitr, praise, raster, tigris, sf, httr, tidyverse, ggmap, nngeo
